# gemini-extended

./: Cargo.toml  FEATURE_PLAN.md  LICENSE  README.md
src/: main.rs
