[package]
name = "gemini-extended"
version = "0.1.0"
edition = "2024"

[dependencies]
glib = "0.22.5"
gtk4 = { version = "0.11.2", features = ["v4_12"] }
libadwaita = { version = "0.9.1", features = ["v1_4"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
